force-app/main/default/objects/Risk_Assessment__c/Risk_Assessment__c.object-meta.xml
<CustomObject>
    <description>Every Trade Request must be reviewed before execution.</description>
    <label>Risk Assessment</label>
    <nameField>
        <displayFormat>RA-{00000}</displayFormat>
        <label>Assessment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risk Assessments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>