force-app/main/default/objects/Risk_Assessment__c/fields/Exposure_Amount__c.field-meta.xml
<CustomField>
    <fullName>Exposure_Amount__c</fullName>
    <description>Total money exposed.</description>
    <label>Exposure Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>