force-app/main/default/objects/Risk_Assessment__c/fields/Margin_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Margin_Requirement__c</fullName>
    <label>Margin Requirement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>