force-app/main/default/objects/Risk_Assessment__c/fields/Margin_Utilization__c.field-meta.xml
<CustomField>
    <fullName>Margin_Utilization__c</fullName>
    <formula>Exposure_Amount__c / Margin_Requirement__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin Utilization</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>