force-app/main/default/objects/Risk_Assessment__c/fields/Probability_of_Success__c.field-meta.xml
<CustomField>
    <fullName>Probability_of_Success__c</fullName>
    <label>Probability of Success</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>