force-app/main/default/objects/Risk_Assessment__c/fields/Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Recommendation__c</fullName>
    <label>Recommendation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approve</fullName>
            </value>
            <value>
                <fullName>Reject</fullName>
            </value>
            <value>
                <fullName>Modify Quantity</fullName>
            </value>
            <value>
                <fullName>Increase Margin</fullName>
            </value>
            <value>
                <fullName>Review Again</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>