force-app/main/default/objects/Risk_Assessment__c/fields/Risk_Category__c.field-meta.xml
<CustomField>
    <fullName>Risk_Category__c</fullName>
    <formula>IF(
Risk_Score__c&lt;=30,
&quot;Low&quot;,
IF(
Risk_Score__c&lt;=60,
&quot;Medium&quot;,
IF(
Risk_Score__c&lt;=80,
&quot;High&quot;,
&quot;Critical&quot;
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Risk Category</label>
    <type>Text</type>
</CustomField>