force-app/main/default/objects/Risk_Assessment__c/fields/Trade_Request__c.field-meta.xml
<CustomField>
    <fullName>Trade_Request__c</fullName>
    <label>Trade Request</label>
    <referenceTo>Trade_Request__c</referenceTo>
    <relationshipLabel>Risk Assessments</relationshipLabel>
    <relationshipName>Risk_Assessments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>