force-app/main/default/objects/Risk_Assessment__c/fields/Volatility_Index_VIX__c.field-meta.xml
<CustomField>
    <fullName>Volatility_Index_VIX__c</fullName>
    <label>Volatility Index (VIX)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>