force-app/main/default/objects/Risk_Assessment__c/validationRules/Exposure_must_be_greater_than_zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Exposure_must_be_greater_than_zero</fullName>
    <active>true</active>
    <errorConditionFormula>Exposure_Amount__c &lt;=0</errorConditionFormula>
    <errorDisplayField>Exposure_Amount__c</errorDisplayField>
    <errorMessage>Exposure amount must be greater than zero.</errorMessage>
</ValidationRule>