force-app/main/default/objects/Risk_Assessment__c/validationRules/Risk_Score_cannot_be_negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Risk_Score_cannot_be_negative</fullName>
    <active>true</active>
    <errorConditionFormula>Risk_Score__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Risk_Score__c</errorDisplayField>
    <errorMessage>Risk Score cannot be negative.</errorMessage>
</ValidationRule>