force-app/main/default/objects/Risk_Assessment__c/validationRules/Risk_Score_cannot_exceed_100.validationRule-meta.xml
<ValidationRule>
    <fullName>Risk_Score_cannot_exceed_100</fullName>
    <active>true</active>
    <errorConditionFormula>Risk_Score__c &gt; 100</errorConditionFormula>
    <errorDisplayField>Risk_Score__c</errorDisplayField>
    <errorMessage>Risk Score cannot exceed 100.</errorMessage>
</ValidationRule>